// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getActionVersion > core.getInput 1`] = `[]`;

exports[`getActionVersion > cp.execFileSync 1`] = `[]`;

exports[`getActionVersion > tc.cacheDir 1`] = `[]`;

exports[`getActionVersion > tc.downloadTool 1`] = `[]`;

exports[`getActionVersion > tc.extractTar 1`] = `[]`;

exports[`getActionVersion > tc.find 1`] = `[]`;

exports[`getActionVersion > which.sync 1`] = `[]`;

exports[`getArgs > bad pylance-version > core.getInput 1`] = `
[
  [
    "pylance-version",
  ],
  [
    "version",
  ],
]
`;

exports[`getArgs > bad pylance-version > cp.execFileSync 1`] = `[]`;

exports[`getArgs > bad pylance-version > tc.cacheDir 1`] = `[]`;

exports[`getArgs > bad pylance-version > tc.downloadTool 1`] = `[]`;

exports[`getArgs > bad pylance-version > tc.extractTar 1`] = `[]`;

exports[`getArgs > bad pylance-version > tc.find 1`] = `[]`;

exports[`getArgs > bad pylance-version > which.sync 1`] = `[]`;

exports[`getArgs > bad version > core.getInput 1`] = `
[
  [
    "version",
  ],
]
`;

exports[`getArgs > bad version > cp.execFileSync 1`] = `[]`;

exports[`getArgs > bad version > tc.cacheDir 1`] = `[]`;

exports[`getArgs > bad version > tc.downloadTool 1`] = `[]`;

exports[`getArgs > bad version > tc.extractTar 1`] = `[]`;

exports[`getArgs > bad version > tc.find 1`] = `[]`;

exports[`getArgs > bad version > which.sync 1`] = `[]`;

exports[`getArgs > valid version > 1.1.308 dashes > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > 1.1.308 dashes > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > 1.1.308 dashes > result 1`] = `
{
  "annotate": Set {
    "error",
    "warning",
  },
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
    "--typeshed-path",
    "/path/to/typeshed",
    "--venv-path",
    "/path/to-venv",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 308,
    "prerelease": [],
    "raw": "1.1.308",
    "version": "1.1.308",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > 1.1.308 dashes > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.308",
  ],
]
`;

exports[`getArgs > valid version > 1.1.308 dashes > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.308.tgz",
  ],
]
`;

exports[`getArgs > valid version > 1.1.308 dashes > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > 1.1.308 dashes > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.308",
  ],
]
`;

exports[`getArgs > valid version > 1.1.308 dashes > which.sync 1`] = `[]`;

exports[`getArgs > valid version > 1.1.309 dashes > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > 1.1.309 dashes > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > 1.1.309 dashes > result 1`] = `
{
  "annotate": Set {
    "error",
    "warning",
  },
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
    "--typeshedpath",
    "/path/to/typeshed",
    "--venvpath",
    "/path/to-venv",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 309,
    "prerelease": [],
    "raw": "1.1.309",
    "version": "1.1.309",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > 1.1.309 dashes > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.309",
  ],
]
`;

exports[`getArgs > valid version > 1.1.309 dashes > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.309.tgz",
  ],
]
`;

exports[`getArgs > valid version > 1.1.309 dashes > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > 1.1.309 dashes > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.309",
  ],
]
`;

exports[`getArgs > valid version > 1.1.309 dashes > which.sync 1`] = `[]`;

exports[`getArgs > valid version > 1.1.310 dashes > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > 1.1.310 dashes > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > 1.1.310 dashes > result 1`] = `
{
  "annotate": Set {
    "error",
    "warning",
  },
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
    "--typeshedpath",
    "/path/to/typeshed",
    "--venvpath",
    "/path/to-venv",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 310,
    "prerelease": [],
    "raw": "1.1.310",
    "version": "1.1.310",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > 1.1.310 dashes > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.310",
  ],
]
`;

exports[`getArgs > valid version > 1.1.310 dashes > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.310.tgz",
  ],
]
`;

exports[`getArgs > valid version > 1.1.310 dashes > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > 1.1.310 dashes > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.310",
  ],
]
`;

exports[`getArgs > valid version > 1.1.310 dashes > which.sync 1`] = `[]`;

exports[`getArgs > valid version > annotate "" > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > annotate "" > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > annotate "" > result 1`] = `
{
  "annotate": Set {
    "error",
    "warning",
  },
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > annotate "" > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "" > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > annotate "" > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > annotate "" > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "" > which.sync 1`] = `[]`;

exports[`getArgs > valid version > annotate "False" > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > annotate "False" > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > annotate "False" > result 1`] = `
{
  "annotate": Set {},
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > annotate "False" > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "False" > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > annotate "False" > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > annotate "False" > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "False" > which.sync 1`] = `[]`;

exports[`getArgs > valid version > annotate "True" > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > annotate "True" > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > annotate "True" > result 1`] = `
{
  "annotate": Set {
    "error",
    "warning",
  },
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > annotate "True" > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "True" > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > annotate "True" > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > annotate "True" > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "True" > which.sync 1`] = `[]`;

exports[`getArgs > valid version > annotate "all" > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > annotate "all" > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > annotate "all" > result 1`] = `
{
  "annotate": Set {
    "error",
    "warning",
  },
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > annotate "all" > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "all" > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > annotate "all" > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > annotate "all" > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "all" > which.sync 1`] = `[]`;

exports[`getArgs > valid version > annotate "errors" > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > annotate "errors" > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > annotate "errors" > result 1`] = `
{
  "annotate": Set {
    "error",
  },
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > annotate "errors" > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "errors" > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > annotate "errors" > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > annotate "errors" > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "errors" > which.sync 1`] = `[]`;

exports[`getArgs > valid version > annotate "errors, warnings" > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > annotate "errors, warnings" > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > annotate "errors, warnings" > result 1`] = `
{
  "annotate": Set {
    "error",
    "warning",
  },
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > annotate "errors, warnings" > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "errors, warnings" > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > annotate "errors, warnings" > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > annotate "errors, warnings" > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "errors, warnings" > which.sync 1`] = `[]`;

exports[`getArgs > valid version > annotate "false" > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > annotate "false" > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > annotate "false" > result 1`] = `
{
  "annotate": Set {},
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > annotate "false" > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "false" > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > annotate "false" > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > annotate "false" > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "false" > which.sync 1`] = `[]`;

exports[`getArgs > valid version > annotate "none" > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > annotate "none" > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > annotate "none" > result 1`] = `
{
  "annotate": Set {},
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > annotate "none" > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "none" > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > annotate "none" > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > annotate "none" > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "none" > which.sync 1`] = `[]`;

exports[`getArgs > valid version > annotate "true" > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > annotate "true" > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > annotate "true" > result 1`] = `
{
  "annotate": Set {
    "error",
    "warning",
  },
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > annotate "true" > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "true" > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > annotate "true" > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > annotate "true" > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "true" > which.sync 1`] = `[]`;

exports[`getArgs > valid version > annotate "warnings" > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > annotate "warnings" > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > annotate "warnings" > result 1`] = `
{
  "annotate": Set {
    "warning",
  },
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > annotate "warnings" > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "warnings" > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > annotate "warnings" > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > annotate "warnings" > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "warnings" > which.sync 1`] = `[]`;

exports[`getArgs > valid version > annotate "warnings,errors" > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > annotate "warnings,errors" > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > annotate "warnings,errors" > result 1`] = `
{
  "annotate": Set {
    "warning",
    "error",
  },
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > annotate "warnings,errors" > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "warnings,errors" > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > annotate "warnings,errors" > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > annotate "warnings,errors" > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate "warnings,errors" > which.sync 1`] = `[]`;

exports[`getArgs > valid version > annotate invalid > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > annotate invalid > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > annotate invalid > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate invalid > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > annotate invalid > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > annotate invalid > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate invalid > which.sync 1`] = `[]`;

exports[`getArgs > valid version > annotate invalid comma > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > annotate invalid comma > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > annotate invalid comma > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate invalid comma > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > annotate invalid comma > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > annotate invalid comma > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > annotate invalid comma > which.sync 1`] = `[]`;

exports[`getArgs > valid version > cached > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > cached > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > cached > result 1`] = `
{
  "annotate": Set {
    "error",
    "warning",
  },
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > cached > tc.cacheDir 1`] = `[]`;

exports[`getArgs > valid version > cached > tc.downloadTool 1`] = `[]`;

exports[`getArgs > valid version > cached > tc.extractTar 1`] = `[]`;

exports[`getArgs > valid version > cached > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > cached > which.sync 1`] = `[]`;

exports[`getArgs > valid version > createstub > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > createstub > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > createstub > result 1`] = `
{
  "annotate": Set {},
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
    "--createstub",
    "pygame",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > createstub > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > createstub > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > createstub > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > createstub > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > createstub > which.sync 1`] = `[]`;

exports[`getArgs > valid version > dependencies > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > dependencies > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > dependencies > result 1`] = `
{
  "annotate": Set {},
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
    "--dependencies",
    "TRUE",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > dependencies > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > dependencies > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > dependencies > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > dependencies > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > dependencies > which.sync 1`] = `[]`;

exports[`getArgs > valid version > extra-args malformed > core.getInput 1`] = `
[
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > extra-args malformed > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > extra-args malformed > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > extra-args malformed > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > extra-args malformed > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > extra-args malformed > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > extra-args malformed > which.sync 1`] = `[]`;

exports[`getArgs > valid version > extra-args quotes > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > extra-args quotes > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > extra-args quotes > result 1`] = `
{
  "annotate": Set {
    "error",
    "warning",
  },
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
    "--foo",
    "--bar",
    "--baz=quoted value",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > extra-args quotes > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > extra-args quotes > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > extra-args quotes > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > extra-args quotes > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > extra-args quotes > which.sync 1`] = `[]`;

exports[`getArgs > valid version > many options > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > many options > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > many options > result 1`] = `
{
  "annotate": Set {
    "error",
    "warning",
  },
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
    "--level",
    "warning",
    "--project",
    "/path/to/pyrightconfig.json",
    "--pythonplatform",
    "Linux",
    "--pythonpath",
    "/path/to/python",
    "--pythonversion",
    "3.9",
    "--typeshed-path",
    "/path/to/typeshed",
    "--venv-path",
    "/path/to-venv",
    "--warnings",
    "--lib",
    "--foo",
    "--bar",
    "--baz",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "/path/to/project",
}
`;

exports[`getArgs > valid version > many options > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > many options > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > many options > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > many options > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > many options > which.sync 1`] = `[]`;

exports[`getArgs > valid version > no comments > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > no comments > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > no comments > result 1`] = `
{
  "annotate": Set {},
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > no comments > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > no comments > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > no comments > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > no comments > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > no comments > which.sync 1`] = `[]`;

exports[`getArgs > valid version > pylance-version > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > pylance-version > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > pylance-version > result 1`] = `
{
  "annotate": Set {
    "error",
    "warning",
  },
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 9,
    "minor": 9,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 999,
    "prerelease": [],
    "raw": "9.9.999",
    "version": "9.9.999",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > pylance-version > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "9.9.999",
  ],
]
`;

exports[`getArgs > valid version > pylance-version > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-9.9.999.tgz",
  ],
]
`;

exports[`getArgs > valid version > pylance-version > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > pylance-version > tc.find 1`] = `
[
  [
    "pyright",
    "9.9.999",
  ],
]
`;

exports[`getArgs > valid version > pylance-version > which.sync 1`] = `[]`;

exports[`getArgs > valid version > pylance-version not found > core.getInput 1`] = `
[
  [
    "pylance-version",
  ],
  [
    "version",
  ],
]
`;

exports[`getArgs > valid version > pylance-version not found > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > pylance-version not found > tc.cacheDir 1`] = `[]`;

exports[`getArgs > valid version > pylance-version not found > tc.downloadTool 1`] = `[]`;

exports[`getArgs > valid version > pylance-version not found > tc.extractTar 1`] = `[]`;

exports[`getArgs > valid version > pylance-version not found > tc.find 1`] = `[]`;

exports[`getArgs > valid version > pylance-version not found > which.sync 1`] = `[]`;

exports[`getArgs > valid version > skip-unannotated > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > skip-unannotated > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > skip-unannotated > result 1`] = `
{
  "annotate": Set {
    "error",
    "warning",
  },
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
    "--skipunannotated",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > skip-unannotated > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > skip-unannotated > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > skip-unannotated > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > skip-unannotated > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > skip-unannotated > which.sync 1`] = `[]`;

exports[`getArgs > valid version > stats > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > stats > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > stats > result 1`] = `
{
  "annotate": Set {},
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
    "--stats",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > stats > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > stats > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > stats > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > stats > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > stats > which.sync 1`] = `[]`;

exports[`getArgs > valid version > verbose > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > verbose > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > verbose > result 1`] = `
{
  "annotate": Set {
    "error",
    "warning",
  },
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
    "--lib",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > verbose > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > verbose > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > verbose > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > verbose > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > verbose > which.sync 1`] = `[]`;

exports[`getArgs > valid version > verbose flag > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > verbose flag > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > verbose flag > result 1`] = `
{
  "annotate": Set {},
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
    "--verbose",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > verbose flag > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > verbose flag > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > verbose flag > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > verbose flag > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > verbose flag > which.sync 1`] = `[]`;

exports[`getArgs > valid version > verifytypes > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > verifytypes > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > verifytypes > result 1`] = `
{
  "annotate": Set {},
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
    "--ignoreexternal",
    "--verifytypes",
    "some.package",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > verifytypes > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > verifytypes > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > verifytypes > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > verifytypes > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > verifytypes > which.sync 1`] = `[]`;

exports[`getArgs > valid version > verifytypes flag > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "pylance-version",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > verifytypes flag > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > verifytypes flag > result 1`] = `
{
  "annotate": Set {},
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
    "--verifytypes",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > verifytypes flag > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > verifytypes flag > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.240.tgz",
  ],
]
`;

exports[`getArgs > valid version > verifytypes flag > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > verifytypes flag > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.240",
  ],
]
`;

exports[`getArgs > valid version > verifytypes flag > which.sync 1`] = `[]`;

exports[`getArgs > valid version > version not found > core.getInput 1`] = `
[
  [
    "version",
  ],
]
`;

exports[`getArgs > valid version > version not found > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > version not found > tc.cacheDir 1`] = `[]`;

exports[`getArgs > valid version > version not found > tc.downloadTool 1`] = `[]`;

exports[`getArgs > valid version > version not found > tc.extractTar 1`] = `[]`;

exports[`getArgs > valid version > version not found > tc.find 1`] = `[]`;

exports[`getArgs > valid version > version not found > which.sync 1`] = `[]`;

exports[`getArgs > valid version > version path > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > version path > cp.execFileSync 1`] = `
[
  [
    "/path/to/which/pyright",
    [
      "--version",
    ],
    {
      "encoding": "utf8",
    },
  ],
]
`;

exports[`getArgs > valid version > version path > result 1`] = `
{
  "annotate": Set {
    "error",
    "warning",
  },
  "args": [],
  "command": "/path/to/which/pyright",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 240,
    "prerelease": [],
    "raw": "1.1.240",
    "version": "1.1.240",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > version path > tc.cacheDir 1`] = `[]`;

exports[`getArgs > valid version > version path > tc.downloadTool 1`] = `[]`;

exports[`getArgs > valid version > version path > tc.extractTar 1`] = `[]`;

exports[`getArgs > valid version > version path > tc.find 1`] = `[]`;

exports[`getArgs > valid version > version path > which.sync 1`] = `
[
  [
    "pyright",
  ],
]
`;

exports[`getArgs > valid version > version path bad version > core.getInput 1`] = `
[
  [
    "version",
  ],
]
`;

exports[`getArgs > valid version > version path bad version > cp.execFileSync 1`] = `
[
  [
    "/path/to/which/pyright",
    [
      "--version",
    ],
    {
      "encoding": "utf8",
    },
  ],
]
`;

exports[`getArgs > valid version > version path bad version > tc.cacheDir 1`] = `[]`;

exports[`getArgs > valid version > version path bad version > tc.downloadTool 1`] = `[]`;

exports[`getArgs > valid version > version path bad version > tc.extractTar 1`] = `[]`;

exports[`getArgs > valid version > version path bad version > tc.find 1`] = `[]`;

exports[`getArgs > valid version > version path bad version > which.sync 1`] = `
[
  [
    "pyright",
  ],
]
`;

exports[`getArgs > valid version > version path bad version 2 > core.getInput 1`] = `
[
  [
    "version",
  ],
]
`;

exports[`getArgs > valid version > version path bad version 2 > cp.execFileSync 1`] = `
[
  [
    "/path/to/which/pyright",
    [
      "--version",
    ],
    {
      "encoding": "utf8",
    },
  ],
]
`;

exports[`getArgs > valid version > version path bad version 2 > tc.cacheDir 1`] = `[]`;

exports[`getArgs > valid version > version path bad version 2 > tc.downloadTool 1`] = `[]`;

exports[`getArgs > valid version > version path bad version 2 > tc.extractTar 1`] = `[]`;

exports[`getArgs > valid version > version path bad version 2 > tc.find 1`] = `[]`;

exports[`getArgs > valid version > version path bad version 2 > which.sync 1`] = `
[
  [
    "pyright",
  ],
]
`;

exports[`getArgs > valid version > version path bad version 3 > core.getInput 1`] = `
[
  [
    "version",
  ],
]
`;

exports[`getArgs > valid version > version path bad version 3 > cp.execFileSync 1`] = `
[
  [
    "/path/to/which/pyright",
    [
      "--version",
    ],
    {
      "encoding": "utf8",
    },
  ],
]
`;

exports[`getArgs > valid version > version path bad version 3 > tc.cacheDir 1`] = `[]`;

exports[`getArgs > valid version > version path bad version 3 > tc.downloadTool 1`] = `[]`;

exports[`getArgs > valid version > version path bad version 3 > tc.extractTar 1`] = `[]`;

exports[`getArgs > valid version > version path bad version 3 > tc.find 1`] = `[]`;

exports[`getArgs > valid version > version path bad version 3 > which.sync 1`] = `
[
  [
    "pyright",
  ],
]
`;

exports[`getArgs > valid version > version path error executing > core.getInput 1`] = `
[
  [
    "version",
  ],
]
`;

exports[`getArgs > valid version > version path error executing > cp.execFileSync 1`] = `
[
  [
    "/path/to/which/pyright",
    [
      "--version",
    ],
    {
      "encoding": "utf8",
    },
  ],
]
`;

exports[`getArgs > valid version > version path error executing > tc.cacheDir 1`] = `[]`;

exports[`getArgs > valid version > version path error executing > tc.downloadTool 1`] = `[]`;

exports[`getArgs > valid version > version path error executing > tc.extractTar 1`] = `[]`;

exports[`getArgs > valid version > version path error executing > tc.find 1`] = `[]`;

exports[`getArgs > valid version > version path error executing > which.sync 1`] = `
[
  [
    "pyright",
  ],
]
`;

exports[`getArgs > valid version > version path not found > core.getInput 1`] = `
[
  [
    "version",
  ],
]
`;

exports[`getArgs > valid version > version path not found > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > version path not found > tc.cacheDir 1`] = `[]`;

exports[`getArgs > valid version > version path not found > tc.downloadTool 1`] = `[]`;

exports[`getArgs > valid version > version path not found > tc.extractTar 1`] = `[]`;

exports[`getArgs > valid version > version path not found > tc.find 1`] = `[]`;

exports[`getArgs > valid version > version path not found > which.sync 1`] = `
[
  [
    "pyright",
  ],
]
`;

exports[`getArgs > valid version > version takes precedence over pylance-version > core.getInput 1`] = `
[
  [
    "annotate",
  ],
  [
    "create-stub",
  ],
  [
    "dependencies",
  ],
  [
    "extra-args",
  ],
  [
    "ignore-external",
  ],
  [
    "level",
  ],
  [
    "lib",
  ],
  [
    "no-comments",
  ],
  [
    "project",
  ],
  [
    "python-path",
  ],
  [
    "python-platform",
  ],
  [
    "python-version",
  ],
  [
    "skip-unannotated",
  ],
  [
    "stats",
  ],
  [
    "typeshed-path",
  ],
  [
    "venv-path",
  ],
  [
    "verbose",
  ],
  [
    "verify-types",
  ],
  [
    "version",
  ],
  [
    "warnings",
  ],
  [
    "working-directory",
  ],
]
`;

exports[`getArgs > valid version > version takes precedence over pylance-version > cp.execFileSync 1`] = `[]`;

exports[`getArgs > valid version > version takes precedence over pylance-version > result 1`] = `
{
  "annotate": Set {
    "error",
    "warning",
  },
  "args": [
    "<TEMP_DIR>/rootDir/cached/pyright/package/index.js",
  ],
  "command": "<execPath>",
  "pyrightVersion": SemVer {
    "build": [],
    "loose": false,
    "major": 1,
    "minor": 1,
    "options": {
      "includePrerelease": false,
      "loose": false,
    },
    "patch": 310,
    "prerelease": [],
    "raw": "1.1.310",
    "version": "1.1.310",
  },
  "workingDirectory": "",
}
`;

exports[`getArgs > valid version > version takes precedence over pylance-version > tc.cacheDir 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright",
    "pyright",
    "1.1.310",
  ],
]
`;

exports[`getArgs > valid version > version takes precedence over pylance-version > tc.downloadTool 1`] = `
[
  [
    "https://registry.npmjs.org/pyright/-/pyright-1.1.310.tgz",
  ],
]
`;

exports[`getArgs > valid version > version takes precedence over pylance-version > tc.extractTar 1`] = `
[
  [
    "<TEMP_DIR>/rootDir/pyright.tar.gz",
  ],
]
`;

exports[`getArgs > valid version > version takes precedence over pylance-version > tc.find 1`] = `
[
  [
    "pyright",
    "1.1.310",
  ],
]
`;

exports[`getArgs > valid version > version takes precedence over pylance-version > which.sync 1`] = `[]`;

exports[`getNodeInfo > core.getInput 1`] = `[]`;

exports[`getNodeInfo > cp.execFileSync 1`] = `[]`;

exports[`getNodeInfo > tc.cacheDir 1`] = `[]`;

exports[`getNodeInfo > tc.downloadTool 1`] = `[]`;

exports[`getNodeInfo > tc.extractTar 1`] = `[]`;

exports[`getNodeInfo > tc.find 1`] = `[]`;

exports[`getNodeInfo > which.sync 1`] = `[]`;
